--- a/web/index.html
+++ b/web/index.html
@@ -9,7 +9,12 @@
     <script defer src="packages/browser/dart.js"></script>
     <link rel="stylesheet" href="styles.css">
   </head>
-  <body>
+  <body onbeforeunload="return myFunction()">
     <my-app>Loading...</my-app>
   </body>
+	<script>
+		function myFunction() {
+			return "Write something clever here...";
+		}
+	</script>
 </html>
